--- a/source/dofs/dof_tools.inst.in
+++ b/source/dofs/dof_tools.inst.in
@@ -33,9 +33,10 @@ for (deal_II_dimension : DIMENSIONS)
    IndexSet & dof_set);
 #endif
 
-  template void
-  DoFTools::make_cell_patches<DoFHandler<deal_II_dimension> >
-  (SparsityPattern&, const DoFHandler<deal_II_dimension>&, const unsigned int, const std::vector<bool>&, types::global_dof_index);
+  template
+  void
+  DoFTools::make_cell_patches
+  (SparsityPattern&, const DoFHandler<deal_II_dimension>&, const unsigned int, const std::vector<bool>&, const types::global_dof_index);
  
   template
   std::vector<unsigned int>
